fix: Missing border-bottom in link buttons

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -266,19 +266,21 @@ margin-top: -10px;
 padding: 0;
 }
 #portfolio-elem .portfolio-url {
-border: 0;
-border-radius: 5px;
-color: #fff;
-font: 24px 'league_gothicregular', helvetica, arial, sans-serif;
-letter-spacing: 3px;
-text-transform: uppercase;
-padding: 7px 10px;
-transition: all 0.2s ease-in;
-background: linear-gradient(to bottom,#d9593d,#9e3620);
+	border: 0;
+	border-radius: 5px;
+	color: #fff;
+	font: 24px 'league_gothicregular', helvetica, arial, sans-serif;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	padding: 7px 10px;
+	transition: all 0.2s ease-in;
+	background: linear-gradient(to bottom,#d9593d,#9e3620);
+	border-bottom: 2px solid #500;
 }
+#portfolio-elem del .portfolio-url,
 #portfolio-elem .portfolio-url:hover {
-background: linear-gradient(to bottom,#9e9388,#67585e);
-border-bottom: 2px solid #222;
+	background: linear-gradient(to bottom,#9e9388,#67585e);
+	border-bottom: 2px solid #222;
 }
 /* hobbies */
 #hobbies p{
